Add hero section
Add background image to hero
Overlay image with text

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
         <meta charset="UTF-8">
         <title>Creative Wave Studios</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     </head>
 
     <body>
 
         <header>
+            
             <h1 class="headertitle">
                 Creative Wave Studios
             </h1>
@@ -48,6 +52,17 @@
             </button>
 
         </header>
+
+        <div class="hero">
+
+            <h1 class="solution">
+                Your solution for elevating your online brand presence.
+            </h1>
+
+            <img src="images/mountains-dimmed.png" alt="A picture of a mountain range" class="img">
+
+
+        </div>
 
     </body>
 
