Add about section
Add comments for readability

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
     <head>
         <meta charset="UTF-8">
@@ -40,30 +40,44 @@
             </select>
 
             <button class="button">
-                <h2 class="headersubtext">
                     Sign Up
-                </h2>
             </button>
 
             <button class="button">
-                <h2 class="headersubtext">
                     Log In
-                </h2>
             </button>
 
         </header>
 
         <div class="hero">
+            
 
-            <h1 class="solution">
-                Your solution for elevating your online brand presence.
+            <h1 class="heromaintext">
+                Your solution for elevating online presence
             </h1>
 
-            <img src="images/mountains-dimmed.png" alt="A picture of a mountain range" class="img">
+            <h2 class="herosubtext">
+                Elevate Your Business with Cutting-Edge Web Solutions
+            </h2>
 
+            <img src="images/mountains-dimmed.png" alt="A picture of a mountain range" class="img">
+        
+        </div>
+
+        <div class="aboutus">
+
+            <h1 class="aboutmaintext">
+                About Us
+            </h1>
+
+            <h2 class="aboutparagraph">
+                Located in Ontario, Creative Wave Studios is an innovative web development firm that was established in 2024. We specialize in creating custom web pages that are tailored to meet your specific needs. We have a strong enthusiasm for innovation and a dedication to perfectionism. We take great satisfaction in providing personalized assistance and building gorgeous websites that have a lasting impression. We are a small, committed company under the direction of an ambitious entrepreneur. Creative Wave Studios can help you bring your ideas to life, whether you're a startup trying to build your web presence or an established company trying to improve your brand. Allow us to assist you in soaring with the creative wave and expanding your online presence.
+            </h2>
 
         </div>
 
     </body>
 
 </html>
+
+
