img now shrinks properly
Adjusted width for aboutus

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                 Elevate Your Business with Cutting-Edge Web Solutions
             </h2>
                 
-            <img src="images/mountains-dimmed.png" alt="A picture of a mountain range" class="img">
+            <div class="imgcontain">
+                <img src="images/mountains-dimmed.png" alt="A picture of a mountain range" class="img">
+            </div>
             
         </div>
 
