Add image carousel
Add section "projects"
Add ul
Add styling to ul
Add carousel navigation

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <meta charset="UTF-8">
         <title>Creative Wave Studios</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+        <script src="script.js" defer></script>
     </head>
 
     <body>
@@ -72,6 +70,52 @@
             <h1 class="portfoliomaintext">
                 Portfolio
             </h1>
+
+            <section class="projects" aria-label="projects">
+
+                <div class="carousel" data-carousel>
+
+                    <button class="carousel-button prev" data-carousel-button="prev">⇦</button>
+                    <button class="carousel-button next" data-carousel-button="next">⇨</button>
+                
+                    <ul data-slides>
+                        
+                        <li class="slide" data-active>
+                            <img src="images/Placeholder.jpg" alt="One of my projects" class="slideimg" >
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholderb.png" alt="One of my projects" class="slideimg">
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholderr.png" alt="One of my projects" class="slideimg">
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholdero.png" alt="One of my projects" class="slideimg">
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholderg.png" alt="One of my projects" class="slideimg">
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholderp.png" alt="One of my projects" class="slideimg">
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholderl.png" alt="One of my projects" class="slideimg">
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholdery.png" alt="One of my projects" class="slideimg">
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholderbr.png" alt="One of my projects" class="slideimg">
+                        </li>
+                        <li class="slide">
+                            <img src="images/placeholdert.png" alt="One of my projects" class="slideimg">
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </section>
 
         </div>
 
