Remove sign up and log in buttons, add hover effect to buttons

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <option value="usd">USD 🇺🇸</option>
             </select>
 
-            <button class="button">
+            <!-- <button class="button headerbutton">
                     Sign Up
             </button>
 
-            <button class="button">
+            <button class="button headerbutton">
                     Log In
-            </button>
+            </button> -->
 
         </header>
 
@@ -91,7 +91,7 @@
 
             <h1 class="servicesmaintext">Services</h1>
 
-            <a href=""><button class="button" id="servicesbutton">Take Me There</button></a>
+            <a href=""><button class="button" id="servicesbutton">Explore Pricing</button></a>
 
         </div>
 
