--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
+    <title>PRXT - Services</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
@@ -12,7 +12,7 @@
     <header>
             
         <h1 class="headertitle">
-            Creative Wave Studios
+            PRXT
         </h1>
        
         <a href="index.html">
