--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>PRXT Web Solutions</title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
-        <link rel="icon" href="favicon.ico" type="image/png">
-        <link rel="shortcut icon" href="favicon.ico" type="image/png">
+        <link rel="icon" href="favicon.png" type="image/png">
+        <link rel="shortcut icon" href="favicon.png" type="image/png">
     </head>
 
     <body>
