--- a/aboutus.html
+++ b/aboutus.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     <title>PRXT - About Us</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
