--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="script.js" defer></script>
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="shortcut icon" href="favicon.png" type="image/png">
+        <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     </head>
 
     <body>
