--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="portfoliostyles.css">
+    <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     <script src="script.js"></script>
     <title>PRXT - Portfolio</title>
 </head>
