Added logos to display programming languages
Turned off user-select to make website more refined

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 </h2>
             </a>
 
-            <select class="selector headerselect">
+            <!-- <select class="selector headerselect">
                 <option value="cad">CAD 🇨🇦</option>
                 <option value="usd">USD 🇺🇸</option>
-            </select>
+            </select> -->
 
             <!-- <button class="button headerbutton">
                     Sign Up
@@ -74,6 +74,20 @@
                 <img src="images/mountains-dimmed.png" alt="A picture of a mountain range" class="img">
             </div>
             
+        </div>
+
+        <div class="programminglanguages">
+
+            <div class="programminglanguagesmaintext">
+                Programming Languages
+            </div>
+            
+            <div class="languagelogocontainer">
+                <img class="languagelogo" id ="html" src="images/html5-logo.png" alt="">
+                <img class="languagelogo" id ="css" src="images/css3-logo.png" alt="">
+                <img class="languagelogo" id ="js" src="images/js-logo.png" alt="">
+            </div>
+
         </div>
 
         <div class="portfolio">
