Temporarily removing selector, internation services will be available soon

--- a/services.html
+++ b/services.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     <title>PRXT - Services</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
@@ -40,10 +42,10 @@
             </h2>
         </a>
 
-        <select class="selector headerselect">
+        <!-- <select class="selector headerselect">
             <option value="cad">CAD 🇨🇦</option>
             <option value="usd">USD 🇺🇸</option>
-        </select>
+        </select> -->
 
         <!-- <button class="button headerbutton">
                 Sign Up
