--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="portfoliostyles.css">
     <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     <script src="script.js"></script>
     <title>PRXT - Portfolio</title>
 </head>
@@ -41,10 +43,10 @@
             </h2>
         </a>
 
-        <select class="selector headerselect">
+        <!-- <select class="selector headerselect">
             <option value="cad">CAD 🇨🇦</option>
             <option value="usd">USD 🇺🇸</option>
-        </select>
+        </select> -->
 
         <!-- <button class="button headerbutton">
                 Sign Up
