Added plans to services page and added styling

--- a/services.html
+++ b/services.html
@@ -6,9 +6,10 @@
     <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/Xolonium" rel="stylesheet">
     <title>PRXT - Services</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="servicesstyles.css">   
 </head>
 <body>
 
@@ -56,6 +57,73 @@
         </button> -->
 
     </header>
+
+    <div class="plancontainer">
+        <div class="plan" id="plan0">
+            <h1 class="planh1" id="singleh1">Single Page</h1>
+            <div class="plandesc" id="desc0">
+                <h3 class="desctext" id="desctext0">
+                    For sites that only require 1 page
+                </h3>
+                <ul id="desc0list">
+                    <li>Custom Design</li>
+                    <li>Responsive Layout</li>
+                    <li>Contact Form</li>
+                    <li>Social Media Links</li>
+                    <li>Basic SEO</li>
+                </ul>
+            </div>    
+        </div>
+
+        <div class="plan" id="plan1">
+            <h1 class="planh1" id="basich1">Basic</h1>
+            <div class="plandesc" id="desc1">
+                <h3 class="desctext" id="desctext1">
+                    For sites that require 1 - 5 pages
+                </h3>
+                <ul id="desc1list">
+                    <li>Everything included in Single</li>
+                    <li>Basic CMS</li>
+                    <li>Standard SEO</li>
+                    <li>Basic Analytics</li>
+                    <li>1 Revision Round</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="plan" id="plan2">
+            <h1 class="planh1" id="standardh1">Standard</h1>
+            <div class="plandesc" id="desc2">
+                <h3 class="desctext" id="desctext2">
+                    For sites that require 1 - 10 pages
+                </h3>
+                <ul id="desc2list">
+                    <li>Everything included in Basic</li>
+                    <li>Enhanced Designs</li>
+                    <li>Advanced SEO</li>
+                    <li>2 Revision Rounds</li>
+                    <li>Basic Security</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="plan" id="plan3">
+            <h1 class="planh1" id="Ultimateh1">Ultimate</h1>
+            <div class="plandesc" id="desc3">
+                <h3 class="desctext" id="desctext3">
+                    For sites that require 10+ pages (+$75 for each additional page)
+                </h3>
+                <ul id="desc2list">
+                    <li>Everything included in Standard</li>
+                    <li>E-commerce Functionality</li>
+                    <li>Custom Features</li>
+                    <li>Membership Area</li>
+                    <li>Ongoing Support for 3 Months</li>
+                    <li>Advanced Security</li>
+                </ul>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
