Added base price to each plan

--- a/services.html
+++ b/services.html
@@ -72,6 +72,12 @@
                     <li>Social Media Links</li>
                     <li>Basic SEO</li>
                 </ul>
+                <div class="planprice" id="planprice0">
+                    <h1 class="pricetitle" id="pricetitle0">
+                        Base Price:
+                    </h1>    
+                    <h1 class="pricenumber" id="pricenumber0">$150</h1>
+                </div>
             </div>    
         </div>
 
@@ -88,6 +94,12 @@
                     <li>Basic Analytics</li>
                     <li>1 Revision Round</li>
                 </ul>
+                <div class="planprice" id="planprice1">
+                    <h1 class="pricetitle" id="pricetitle1">
+                        Base Price:
+                    </h1>
+                    <h1 class="pricenumber" id="pricenumber1">$300</h1>
+                </div>
             </div>
         </div>
 
@@ -104,6 +116,12 @@
                     <li>2 Revision Rounds</li>
                     <li>Basic Security</li>
                 </ul>
+                <div class="planprice" id="planprice2">
+                    <h1 class="pricetitle" id="pricetitle2">
+                        Base Price:
+                    </h1>
+                    <h1 class="pricenumber" id="pricenumber2">$700</h1>
+                </div>
             </div>
         </div>
 
@@ -117,10 +135,15 @@
                     <li>Everything included in Standard</li>
                     <li>E-commerce Functionality</li>
                     <li>Custom Features</li>
-                    <li>Membership Area</li>
                     <li>Ongoing Support for 3 Months</li>
                     <li>Advanced Security</li>
                 </ul>
+                <div class="planprice" id="planprice3">
+                    <h1 class="pricetitle" id="pricetitle3">
+                        Base Price:
+                    </h1>
+                    <h1 class="pricenumber" id="pricenumber3">$1,000</h1>
+                </div>
             </div>
         </div>
     </div>
