Created add to cart buttons for each plan, created placeholder for example links

--- a/services.html
+++ b/services.html
@@ -78,6 +78,10 @@
                     </h1>    
                     <h1 class="pricenumber" id="pricenumber0">$150</h1>
                 </div>
+
+                <h4 class="example">To see an example of a single page site, go to: INSERT LINK</h3>
+
+                <button class="planbuy" id="planbuy0">Add to cart</button>
             </div>    
         </div>
 
@@ -100,6 +104,10 @@
                     </h1>
                     <h1 class="pricenumber" id="pricenumber1">$300</h1>
                 </div>
+
+                <h4 class="example">To see an example of a basic site, go to: INSERT LINK</h3>
+
+                <button class="planbuy" id="planbuy1">Add to cart</button>
             </div>
         </div>
 
@@ -122,6 +130,10 @@
                     </h1>
                     <h1 class="pricenumber" id="pricenumber2">$700</h1>
                 </div>
+
+                <h4 class="example">To see an example of a standard site, go to: INSERT LINK</h3>
+
+                <button class="planbuy" id="planbuy2">Add to cart</button>
             </div>
         </div>
 
@@ -144,6 +156,10 @@
                     </h1>
                     <h1 class="pricenumber" id="pricenumber3">$1,000</h1>
                 </div>
+
+                <h4 class="example">To see an example of an ultimate site, go to: INSERT LINK</h3>
+
+                <button class="planbuy" id="planbuy3">Add to cart</button>
             </div>
         </div>
     </div>
