Created additional options section

--- a/services.html
+++ b/services.html
@@ -163,6 +163,11 @@
             </div>
         </div>
     </div>
+
+    <div class="extras">
+        <h1 class="extrash1">Additonal Options</h1>
+        
+    </div>
     
 </body>
 </html>
