--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="script.js" defer></script>
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="shortcut icon" href="favicon.png" type="image/png">
+        <link href="https://fonts.cdnfonts.com/css/Xolonium" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     </head>
 
@@ -116,7 +117,7 @@
 
             <h1 class="servicesmaintext">Get Started</h1>
 
-            <a href=""><button class="button" id="servicesbutton">Explore Pricing</button></a>
+            <a href="services.html"><button class="button" id="servicesbutton">Explore Pricing</button></a>
 
         </div>
 
