--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="portfoliostyles.css">
     <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link href="https://fonts.cdnfonts.com/css/Xolonium" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/nemoy" rel="stylesheet">
     <script src="script.js"></script>
     <title>PRXT - Portfolio</title>
