--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,22 @@
 
             <a href="https://butterdogg1467.github.io/rockpaperscissors/" target="_blank"><img src="images/rps-ss.png" alt="Rock Paper Scissors Project" class="portfolioimg" id="portfolioimg4"> </a>
             <a href="https://butterdogg1467.github.io/rockpaperscissors/" target="_blank"><h2 class="portfoliolink" id="portfoliolink4">Rock Paper Scissors</h2></a>
+
+            <a href="https://butterdogg1467.github.io/battleship/" target="_blank"><img src="images/battleship.png" alt="" class="portfolioimg" id="portfolioimg5"> </a>
+            <a href="https://butterdogg1467.github.io/battleship/" target="_blank"><h2 class="portfoliolink" id="portfoliolink5">Battleship</h2></a>
+
+            <a href="https://butterdogg1467.github.io/weather-app/" target="_blank"><img src="images/weatherapp.png" alt="" class="portfolioimg" id="portfolioimg6"> </a>
+            <a href="https://butterdogg1467.github.io/weather-app/" target="_blank"><h2 class="portfoliolink" id="portfoliolink6">Weather App</h2></a>
+
+            <a href="https://butterdogg1467.github.io/Tic-Tac-Toe/" target="_blank"><img src="images/tictactoe.png" alt="" class="portfolioimg" id="portfolioimg7"> </a>
+            <a href="https://butterdogg1467.github.io/Tic-Tac-Toe/" target="_blank"><h2 class="portfoliolink" id="portfoliolink7">Tic-Tac-Toe</h2></a>
+
+            <a href="https://butterdogg1467.github.io/Admin-Dashboard/" target="_blank"><img src="images/admindashboard.png" alt="" class="portfolioimg" id="portfolioimg8"> </a>
+            <a href="https://butterdogg1467.github.io/Admin-Dashboard/" target="_blank"><h2 class="portfoliolink" id="portfoliolink8">Dashboard</h2></a>
+
+            <a href="https://butterdogg1467.github.io/Library/" target="_blank"><img src="images/library.png" alt="" class="portfolioimg" id="portfolioimg9"> </a>
+            <a href="https://butterdogg1467.github.io/Library/" target="_blank"><h2 class="portfoliolink" id="portfoliolink9">Library</h2></a>
+            
         </div>
 
     </div>
