--- a/services.html
+++ b/services.html
@@ -164,10 +164,10 @@
         </div>
     </div>
 
-    <div class="extras">
+    <!-- <div class="extras">
         <h1 class="extrash1">Additonal Options</h1>
         
-    </div>
+    </div> -->
     
 </body>
 </html>
